Move back to Java8, due to the latest update isn't compatible to latest Java