@@ -17,7 +17,7 @@ ADD mock.sh ${USER_HOME}/register
 RUN chmod +x ${USER_HOME}/register \
   && ${USER_HOME}/register_test.sh
 
-FROM golang:1.12 as build
+FROM golang:1.13 as build
 WORKDIR /cf-jetbrains-license-server
 ADD register.go register_test.go go.mod go.sum ./
 ADD testdata/* ./testdata/
@@ -26,17 +26,9 @@ RUN go test -v \
  && go build register.go \
  && chmod +x register
 
-FROM openjdk:13-alpine as buildJava
-RUN jlink --compress=2 \
-    --no-man-pages \
-    --module-path /opt/openjdk-13/jmods \
-    --add-modules java.base,java.xml,java.desktop,java.management,java.logging,java.instrument,java.naming,java.scripting \
-    --output /compressed
-
-FROM alpine:3.10.1 as runtime
+FROM openjdk:8-alpine as runtime
 ENV USER_HOME /home/jetbrains
 COPY --from=build /cf-jetbrains-license-server/register ${USER_HOME}/
-COPY --from=buildJava /compressed /opt/jdk/
 ENV PATH=$PATH:/opt/jdk/bin
 ADD entrypoint.sh register.sh ${USER_HOME}/
 RUN apk add --no-cache \
